	  than the environment where the generic is defined.

    o	New methods ([[, print, str) for "dendrogram" class.

    o   sprintf() now checks the agreement between formats and object
	types, and handles special values (NA, Inf, ...) correctly.

    o	chol() now uses a tolerance for non-positive-definiteness and
	so should give more consistent results across platforms.


DEPRECATED & DEFUNCT

    o	The assignment operator `_' is deprecated: a warning is
	given once per R session.

    o	arima0.diag() (package ts) is defunct.

    o	piechart() is defunct.


C-LEVEL FACILITIES

    o	Rversion.h is no longer automatically included by R.h.
	Include it explicitly if you need it.


INSTALLATION CHANGES

    o	R CMD INSTALL is now guaranteed to sort the R source files in
	ASCII order.


BUG FIXES

    o   read.dcf() had a memory leak.



	**************************************************
	*						 *
	*	       1.5 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.5.1


NEW FEATURES

    o   Enhancements to mathematical annotation of plots:

	- expressions involving dot(<something>) now produce a dot accent
	  above the <something> (initial patch from Ben Bolker).

	- within an expression, the symbol partialdiff is now converted
	  to a partial differential symbol (greek delta).

    o	smooth.spline() has a new argument `nknots' allowing to set the
	default number of knots (when `all.knots = FALSE' as per default).


BUG FIXES

    o	Rdconv now skips CRs in input files, even on Unix.

    o	readBin() had a (very slow) memory leak if changing size or reading
	character strings.  writeChar() had a memory leak.

    o	polygon() and rect() with lty = "blank" were omitting the fill
	colour (if present).  symbols(circles=, lty="blank") was
	drawing the border of the disks.

    o	Subsetting non-existent rows in a data frame would produce
	missing row names, which are not allowed.
